--- a/4happydevs.html
+++ b/4happydevs.html
@@ -56,7 +56,12 @@
   <main>
     <div id="overlay"></div>
      <h1 class="p-2 display-3">Hi Assholes!</h1>
-  </main>
+
+     <p id="p3">Hola Man</p>
+     <p id="p4">Hola Man</p>
+     <p id="p5">Hola Man</p>
+  
+    </main>
   
   
   
