--- a/4happydevs.html
+++ b/4happydevs.html
@@ -27,13 +27,13 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-md navbar-dark">
       <a class="navbar-brand" href="#"><span>4</span><span>H</span><span>A</span><span>P</span><span>P</span><span>Y</span><span>D</span><span>E</span><span>V</span><span>S</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="#">Nosotros</a>
