--- a/4happydevs.html
+++ b/4happydevs.html
@@ -18,7 +18,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Bad+Script&family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Covered+By+Your+Grace&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link rel="icon" type="image/e-icon" href="static/favicon.png">
 
     <title>4 Happy Devs</title>
@@ -28,7 +28,8 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-md navbar-dark">
-      <a class="navbar-brand" href="#"><span>4</span><span>H</span><span>A</span><span>P</span><span>P</span><span>Y</span><span>D</span><span>E</span><span>V</span><span>S</span></a>
+      <a class="navbar-brand"
+        href="#"><span>4</span><span>H</span><span>A</span><span>P</span><span>P</span><span>Y</span><span>D</span><span>E</span><span>V</span><span>S</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -55,16 +56,40 @@
 
   <main>
     <div id="overlay"></div>
-     <h1 class="p-2 display-3">Hi Assholes!</h1>
+    <!-- <h1 class="p-2 display-3">Hi Assholes!</h1> -->
 
-     <p id="p3">Hola Man</p>
-     <p id="p4">Hola Man</p>
-     <p id="p5">Hola Man</p>
-  
-    </main>
-  
-  
-  
+    <section id="section-one" class="container-fluid">
+
+      <div class="row flex-sm-nowrap">
+
+        <div class="col-sm-3" id="box-one">
+          <h1 class="d-none d-sm-block">WHO <br><span>WE <br>ARE!</span></h1>
+          <h1 class="d-block d-sm-none text-center">WHO <span>WE ARE!</span></h1>
+        </div>
+
+        <div class="col-sm-8" id="box-two">
+          <h3>EASY ONE!</h3>
+          <p class="text-justify pr-4"></p>
+          <ul>
+            <li class="animate__animated animate__bounce">We are 4 friends.</li>
+            <li class="animate__animated animate__bounce">We are also 4 team mates.</li>
+            <li class="animate__animated animate__bounce">We are also 4 kinda crazy guys </li>
+          </ul>
+          <p>
+            But above all, <b>we are a team of innovative, passionate, 
+              freelance programme-loving developers
+            </b>
+          </p>
+        </div>
+
+      </div>
+
+    </section>
+
+  </main>
+
+
+
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
