--- a/4happydevs.html
+++ b/4happydevs.html
@@ -75,7 +75,7 @@
             <li class="animate__animated animate__bounce">We are also 4 team mates.</li>
             <li class="animate__animated animate__bounce">We are also 4 kinda crazy guys </li>
           </ul>
-          <p>
+          <p class="text-justify">
             But above all, <b>we are a team of innovative, passionate, 
               freelance programme-loving developers
             </b>
