redefined brand color palette

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -56,7 +56,6 @@
 
   <main>
     <div id="overlay"></div>
-    <!-- <h1 class="p-2 display-3">Hi Assholes!</h1> -->
 
     <section id="section-one" class="container-fluid">
 
@@ -69,13 +68,12 @@
 
         <div class="col-sm-8" id="box-two">
           <h3>EASY ONE!</h3>
-          <p class="text-justify pr-4"></p>
           <ul>
             <li class="animate__animated animate__bounce">We are 4 friends.</li>
             <li class="animate__animated animate__bounce">We are also 4 team mates.</li>
             <li class="animate__animated animate__bounce">We are also 4 kinda crazy guys </li>
           </ul>
-          <p class="text-justify">
+          <p class="text-justify lead">
             But above all, <b>we are a team of innovative, passionate, 
               freelance programme-loving developers
             </b>
