--- a/4happydevs.html
+++ b/4happydevs.html
@@ -62,7 +62,7 @@
       <div class="row flex-sm-nowrap">
 
         <div class="col-sm-3" id="box-one">
-          <h1 class="d-none d-sm-block">WHO <br><span>WE <br>ARE!</span></h1>
+          <h1 class="d-none d-sm-block">WHO <br><span>WE</span><br><span>ARE!</span></h1>
           <h1 class="d-block d-sm-none text-center">WHO <span>WE ARE!</span></h1>
         </div>
 
