fixed navbar to top and started second section

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -27,7 +27,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-md navbar-dark">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark">
       <a class="navbar-brand"
         href="#"><span>4</span><span>H</span><span>A</span><span>P</span><span>P</span><span>Y</span><span>D</span><span>E</span><span>V</span><span>S</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -71,13 +71,43 @@
           <ul>
             <li class="animate__animated animate__bounce">We are 4 friends.</li>
             <li class="animate__animated animate__bounce">We are also 4 team mates.</li>
-            <li class="animate__animated animate__bounce">We are also 4 kinda crazy guys </li>
+            <li class="animate__animated animate__bounce">We are also 4 kinda crazy guys!</li>
           </ul>
           <p class="text-justify lead">
-            But above all, <b>we are a team of innovative, passionate, 
-              freelance programme-loving developers
+            But above all, <b>we are a team of innovative, passionate, freelance programme-loving developers
             </b>
           </p>
+        </div>
+
+      </div>
+
+    </section>
+
+    <section id="section-two" class="container-fluid">
+
+      <div class="row flex-sm-nowrap">
+
+        <div class="col-sm-6" id="box-four">
+          <h3>EASY ONE!</h3>
+          <ul>
+            <li class="animate__animated animate__bounce">We are 4 friends.</li>
+            <li class="animate__animated animate__bounce">We are also 4 team mates.</li>
+            <li class="animate__animated animate__bounce">We are also 4 kinda crazy guys!</li>
+          </ul>
+          <p class="text-justify lead">
+            But above all, <b>we are a team of innovative, passionate, freelance programme-loving developers
+            </b>
+          </p>
+        </div>
+
+        <div class="col-sm-3" id="box-three">
+          <h1 class="d-none d-sm-block">WHO <br><span>WE</span><br><span>ARE!</span></h1>
+          <h1 class="d-block d-sm-none text-center">WHO <span>WE ARE!</span></h1>
+        </div>
+
+        <div class="col-sm-3" id="box-three">
+          <h1 class="d-none d-sm-block">WHO <br><span>WE</span><br><span>ARE!</span></h1>
+          <h1 class="d-block d-sm-none text-center">WHO <span>WE ARE!</span></h1>
         </div>
 
       </div>
