--- a/4happydevs.html
+++ b/4happydevs.html
@@ -83,16 +83,16 @@
 
     </section>
 
-    <section id="section-two" class="container-fluid">
+    <section id="section-two" class="container-fluid py-3">
 
       <div class="row flex-sm-nowrap">
 
-        <div class="col-sm-6" id="box-four">
+        <div class="col-sm-6 order-2 order-sm-1" id="box-three">
           <h3>EASY ONE!</h3>
           <ul>
-            <li class="animate__animated animate__bounce">We are 4 friends.</li>
-            <li class="animate__animated animate__bounce">We are also 4 team mates.</li>
-            <li class="animate__animated animate__bounce">We are also 4 kinda crazy guys!</li>
+            <li class="">We are 4 friends.</li>
+            <li class="">We are also 4 team mates.</li>
+            <li class="">We are also 4 kinda crazy guys!</li>
           </ul>
           <p class="text-justify lead">
             But above all, <b>we are a team of innovative, passionate, freelance programme-loving developers
@@ -100,12 +100,12 @@
           </p>
         </div>
 
-        <div class="col-sm-3" id="box-three">
-          <h1 class="d-none d-sm-block">WHO <br><span>WE</span><br><span>ARE!</span></h1>
+        <div class="col-sm-3 order-3 order-sm-2" id="box-four">
+          <h1 class="d-none d-sm-block">WHAT <br><span>WE</span><br><span>DO!</span></h1>
           <h1 class="d-block d-sm-none text-center">WHO <span>WE ARE!</span></h1>
         </div>
 
-        <div class="col-sm-3" id="box-three">
+        <div class="col-sm-3 order-1 order-sm-3" id="box-five">
           <h1 class="d-none d-sm-block">WHO <br><span>WE</span><br><span>ARE!</span></h1>
           <h1 class="d-block d-sm-none text-center">WHO <span>WE ARE!</span></h1>
         </div>
