outlined the second section

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -88,15 +88,20 @@
       <div class="row flex-sm-nowrap">
 
         <div class="col-sm-6 order-2 order-sm-1" id="box-three">
-          <h3>EASY ONE!</h3>
-          <ul>
+          <!-- <h3>EASY ONE!</h3> -->
+          <!-- <ul>
             <li class="">We are 4 friends.</li>
             <li class="">We are also 4 team mates.</li>
             <li class="">We are also 4 kinda crazy guys!</li>
-          </ul>
-          <p class="text-justify lead">
-            But above all, <b>we are a team of innovative, passionate, freelance programme-loving developers
-            </b>
+          </ul> -->
+
+          <p class="text-justify">
+            <span>We develop applications.</span> Our especiallities are <b>mobile</b> and <b>web</b> 
+            applications. <br>
+            We do it because we are passionate and love challenges. We also do it learn and improve 
+            our skills. And if you need it, <span>we can also make one for you!</span> <a class="lead" 
+            href="#">Let's talk!</a>
+
           </p>
         </div>
 
