styled breakpoints for second section

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -105,15 +105,15 @@
           </p>
         </div>
 
-        <div class="col-sm-3 order-3 order-sm-2" id="box-four">
+        <div class="col-sm-6 order-3 order-sm-2" id="box-four">
           <h1 class="d-none d-sm-block">WHAT <br><span>WE</span><br><span>DO!</span></h1>
           <h1 class="d-block d-sm-none text-center">WHAT <span>WE DO!</span></h1>
         </div>
 
-        <div class="col-sm-3 order-1 order-sm-3" id="box-five">
+        <!-- <div class="col-sm-3 order-1 order-sm-3" id="box-five">
           <h1 class="d-none d-sm-block">WHO <br><span>WE</span><br><span>ARE!</span></h1>
           <h1 class="d-block d-sm-none text-center">WHO <span>WE ARE!</span></h1>
-        </div>
+        </div> -->
 
       </div>
 
