initialized 3rd section (called section-half-one)

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -83,25 +83,27 @@
 
     </section>
 
+    <section id="section-half-one">
+
+      <div class="row">
+        <div class="col-3"></div>
+        <div class="col-3"></div>
+        <div class="col-3"></div>
+        <div class="col-3"></div>
+      </div>
+    </section>
+
     <section id="section-two" class="container-fluid py-3">
 
       <div class="row flex-sm-nowrap">
 
         <div class="col-sm-6 order-2 order-sm-1" id="box-three">
-          <!-- <h3>EASY ONE!</h3> -->
-          <!-- <ul>
-            <li class="">We are 4 friends.</li>
-            <li class="">We are also 4 team mates.</li>
-            <li class="">We are also 4 kinda crazy guys!</li>
-          </ul> -->
-
           <p class="text-justify">
             <span>We develop applications.</span> Our especiallities are <b>mobile</b> and <b>web</b> 
             applications. <br>
             We do it because we are passionate and love challenges. We also do it learn and improve 
             our skills. And if you need it, <span>we can also make one for you!</span> <a class="lead" 
             href="#">Let's talk!</a>
-
           </p>
         </div>
 
@@ -109,11 +111,6 @@
           <h1 class="d-none d-sm-block">WHAT <br><span>WE</span><br><span>DO!</span></h1>
           <h1 class="d-block d-sm-none text-center">WHAT <span>WE DO!</span></h1>
         </div>
-
-        <!-- <div class="col-sm-3 order-1 order-sm-3" id="box-five">
-          <h1 class="d-none d-sm-block">WHO <br><span>WE</span><br><span>ARE!</span></h1>
-          <h1 class="d-block d-sm-none text-center">WHO <span>WE ARE!</span></h1>
-        </div> -->
 
       </div>
 
