fixed issue with grid system in one and a half section

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -83,13 +83,30 @@
 
     </section>
 
-    <section id="section-half-one">
+    <section id="section-half-one" class="container-fluid p-4">
 
-      <div class="row">
-        <div class="col-3"></div>
-        <div class="col-3"></div>
-        <div class="col-3"></div>
-        <div class="col-3"></div>
+      <div class="row justify-content-around">
+
+        <div class="col-md container m-2">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+            Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
+        </div>
+
+        <div class="col-md container m-2">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+            Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
+        </div>
+
+        <div class="col-md container m-2">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+            Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
+        </div>
+
+        <div class="col-md container m-2">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+            Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
+        </div>
+
       </div>
     </section>
 
