section one and a half grid finished; next, adding content and style

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -87,22 +87,22 @@
 
       <div class="row justify-content-around">
 
-        <div class="col-md container m-2">
+        <div class="col-sm-6 col-lg container m-lg-2 p-lg-1 text-justify">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
         </div>
 
-        <div class="col-md container m-2">
+        <div class="col-sm-6 col-lg container m-lg-2 p-lg-1 text-justify">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+            Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
+        </div>
+        <!-- <div class="w-100 d-block d-md-none"></div> -->
+        <div class="col-sm-6 col-lg container m-lg-2 p-lg-1 text-justify">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
         </div>
 
-        <div class="col-md container m-2">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
-        </div>
-
-        <div class="col-md container m-2">
+        <div class="col-sm-6 col-lg container m-lg-2 p-lg-1 text-justify">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
         </div>
