added style to cards

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -37,16 +37,16 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Nosotros</a>
+            <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="#">Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="#">What we do</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Home</a>
+            <a class="nav-link " href="#">Contact</a>
           </li>
         </ul>
       </div>
@@ -69,9 +69,9 @@
         <div class="col-sm-8" id="box-two">
           <h3>EASY ONE!</h3>
           <ul>
-            <li class="animate__animated animate__bounce">We are 4 friends.</li>
-            <li class="animate__animated animate__bounce">We are also 4 team mates.</li>
-            <li class="animate__animated animate__bounce">We are also 4 kinda crazy guys!</li>
+            <li>We are 4 friends.</li>
+            <li>We are also 4 team mates.</li>
+            <li>We are also 4 kinda crazy guys!</li>
           </ul>
           <p class="text-justify lead">
             But above all, <b>we are a team of innovative, passionate, freelance programme-loving developers
@@ -87,23 +87,39 @@
 
       <div class="row justify-content-around">
 
-        <div class="col-sm-6 col-lg container m-lg-2 p-lg-1 text-justify">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+        <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
+          <figure>
+            <img src="static/angus.jpg" alt="">
+          </figure>
+          <h5 class="lead">Isaac...Isaac Newton</h5>
+          <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
         </div>
 
-        <div class="col-sm-6 col-lg container m-lg-2 p-lg-1 text-justify">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+        <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
+          <figure>
+            <img src="static/nacho.jpg" alt="">
+          </figure>
+          <h5 class="lead">Billy...Billy Gates</h5>
+          <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
         </div>
         <!-- <div class="w-100 d-block d-md-none"></div> -->
-        <div class="col-sm-6 col-lg container m-lg-2 p-lg-1 text-justify">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+        <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
+          <figure>
+            <img src="static/enano.jpg" alt="">
+          </figure>
+          <h5 class="lead">Enter...Enterpreneureshipmentrep</h5>
+          <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
         </div>
 
-        <div class="col-sm-6 col-lg container m-lg-2 p-lg-1 text-justify">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+        <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
+          <figure>
+            <img src="static/mauro.jpeg" alt="">
+          </figure>
+          <h5 class="lead">Maradona</h5>
+          <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
         </div>
 
@@ -114,17 +130,16 @@
 
       <div class="row flex-sm-nowrap">
 
-        <div class="col-sm-6 order-2 order-sm-1" id="box-three">
+        <div class="col-sm-6 order-2 order-md-1" id="box-three">
           <p class="text-justify">
             <span>We develop applications.</span> Our especiallities are <b>mobile</b> and <b>web</b> 
-            applications. <br>
-            We do it because we are passionate and love challenges. We also do it learn and improve 
-            our skills. And if you need it, <span>we can also make one for you!</span> <a class="lead" 
-            href="#">Let's talk!</a>
+            applications.
+            We do it because we are passionate and love challenges. We also do it to learn and improve 
+            our skills. <span>Feel free to get in touch with us for more information!</span>
           </p>
         </div>
 
-        <div class="col-sm-6 order-3 order-sm-2" id="box-four">
+        <div class="col-sm-6 order-1 order-md-2" id="box-four">
           <h1 class="d-none d-sm-block">WHAT <br><span>WE</span><br><span>DO!</span></h1>
           <h1 class="d-block d-sm-none text-center">WHAT <span>WE DO!</span></h1>
         </div>
