changed nachos photo

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -98,7 +98,7 @@
 
         <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
           <figure>
-            <img src="static/nacho.jpg" alt="">
+            <img src="static/nacho.jpeg" alt="">
           </figure>
           <h5 class="lead">Billy...Billy Gates</h5>
           <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
@@ -130,7 +130,7 @@
 
       <div class="row flex-sm-nowrap">
 
-        <div class="col-sm-6 order-2 order-md-1" id="box-three">
+        <div class="col-sm-6 order-2 order-md-1 align-self-center" id="box-three">
           <p class="text-justify">
             <span>We develop applications.</span> Our especiallities are <b>mobile</b> and <b>web</b> 
             applications.
