--- a/4happydevs.html
+++ b/4happydevs.html
@@ -91,7 +91,8 @@
           <figure>
             <img src="static/angus.jpg" alt="">
           </figure>
-          <h5 class="lead">Isaac...Isaac Newton</h5>
+          <h5 class="lead">Augusto Sardá</h5>
+          <hr>
           <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
         </div>
@@ -100,7 +101,8 @@
           <figure>
             <img src="static/nacho.jpeg" alt="">
           </figure>
-          <h5 class="lead">Billy...Billy Gates</h5>
+          <h5 class="lead">Nacho Consolani</h5>
+          <hr>
           <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
         </div>
@@ -109,7 +111,8 @@
           <figure>
             <img src="static/enano.jpg" alt="">
           </figure>
-          <h5 class="lead">Enter...Enterpreneureshipmentrep</h5>
+          <h5 class="lead">Axel Díaz</h5>
+          <hr>
           <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
         </div>
@@ -118,7 +121,8 @@
           <figure>
             <img src="static/mauro.jpeg" alt="">
           </figure>
-          <h5 class="lead">Maradona</h5>
+          <h5 class="lead">Mauro Consolani</h5>
+          <hr>
           <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
         </div>
