added description to angus card

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -93,8 +93,12 @@
           </figure>
           <h5 class="lead">Augusto Sardá</h5>
           <hr>
-          <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
+          <p class="text-justify">
+            Alias, <em>Angus</em>. He is the <b>math</b> guy. Electromechanical engineer, specialized in 
+            industrial automation. Calm, patient, chilled and thoughtfull partner. Above all, a great team mate and 
+            a better friend. <em>Numpy</em> and <em>Matplotlib</em> are to <em>Angus</em> what a sword and a 
+            shield are to a warrior.  
+          </p>
         </div>
 
         <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
@@ -103,8 +107,9 @@
           </figure>
           <h5 class="lead">Nacho Consolani</h5>
           <hr>
-          <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
+          <p class="text-justify">
+            
+          </p>
         </div>
         <!-- <div class="w-100 d-block d-md-none"></div> -->
         <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
