added description to nacho card

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -108,7 +108,10 @@
           <h5 class="lead">Nacho Consolani</h5>
           <hr>
           <p class="text-justify">
-            
+            The <em>brain</em>. In his head lives the knowledge. He is the one that "cooks" the solution to
+           complex issues. Enhanced code comes out from his hands. He is curious and a life-long learner. He also
+           holds great skills when it comes to sharing his knowledge. React, React Native, Node.js, Express.js &
+            Firebase are just some of his weapons. 
           </p>
         </div>
         <!-- <div class="w-100 d-block d-md-none"></div> -->
@@ -118,8 +121,9 @@
           </figure>
           <h5 class="lead">Axel Díaz</h5>
           <hr>
-          <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
+          <p class="text-justify">
+            
+          </p>
         </div>
 
         <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
