creating axel's card content

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -95,7 +95,7 @@
           <hr>
           <p class="text-justify">
             Alias, <em>Angus</em>. He is the <b>math</b> guy. Electromechanical engineer, specialized in 
-            industrial automation. Calm, patient, chilled and thoughtfull partner. Above all, a great team mate and 
+            industrial automation. <br>Calm, patient, chilled and thoughtfull partner. Above all, a great team mate and 
             a better friend. <em>Numpy</em> and <em>Matplotlib</em> are to <em>Angus</em> what a sword and a 
             shield are to a warrior.  
           </p>
@@ -109,7 +109,7 @@
           <hr>
           <p class="text-justify">
             The <em>brain</em>. In his head lives the knowledge. He is the one that "cooks" the solution to
-           complex issues. Enhanced code comes out from his hands. He is curious and a life-long learner. He also
+           complex issues. Enhanced code comes out from his hands. Easy-going, curious and a life-long learner. He also
            holds great skills when it comes to sharing his knowledge. React, React Native, Node.js, Express.js &
             Firebase are just some of his weapons. 
           </p>
@@ -122,6 +122,7 @@
           <h5 class="lead">Axel Díaz</h5>
           <hr>
           <p class="text-justify">
+            The <em>engine</em>. He is our Senior developer. Always at the forefront in this field.
             
           </p>
         </div>
