finished axel's card content

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -122,8 +122,11 @@
           <h5 class="lead">Axel Díaz</h5>
           <hr>
           <p class="text-justify">
-            The <em>engine</em>. He is our Senior developer. Always at the forefront in this field.
-            
+            The <em>engine</em>. He is our senior developer. Always at the forefront in his field. He is by
+            nature an entrepreneur. Enthusiastic, passionate and a very joyful team mate. Certified Scrum 
+            Master, React Native developer, founder and teacher at <em>Tekné IT Institute</em> and much more.
+            He is an expert at boosting the team's motivation.  
+
           </p>
         </div>
 
