kinda finished the 4th card

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -94,10 +94,10 @@
           <h5 class="lead">Augusto Sardá</h5>
           <hr>
           <p class="text-justify">
-            Alias, <em>Angus</em>. He is the <b>math</b> guy. Electromechanical engineer, specialized in 
+            Alias, <em>Angus</em>. He is the <em>math</em> guy. Electromechanical engineer, specialized in 
             industrial automation. <br>Calm, patient, chilled and thoughtfull partner. Above all, a great team mate and 
             a better friend. <em>Numpy</em> and <em>Matplotlib</em> are to <em>Angus</em> what a sword and a 
-            shield are to a warrior.  
+            shield are to a warrior. As you might have conclude, Python is his main IT strength. 
           </p>
         </div>
 
@@ -125,8 +125,7 @@
             The <em>engine</em>. He is our senior developer. Always at the forefront in his field. He is by
             nature an entrepreneur. Enthusiastic, passionate and a very joyful team mate. Certified Scrum 
             Master, React Native developer, founder and teacher at <em>Tekné IT Institute</em> and much more.
-            He is an expert at boosting the team's motivation.  
-
+            He is an expert at boosting the team's motivation.
           </p>
         </div>
 
@@ -136,8 +135,11 @@
           </figure>
           <h5 class="lead">Mauro Consolani</h5>
           <hr>
-          <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Vitae ad excepturi pariatur quae doloribus fuga voluptatibus vel rerum! Iste, cupiditate.</p>
+          <p class="text-justify">
+            The <em>designer</em>. He is practical and straight forward. When time becomes a scrace resource,
+            he returns functional and good looking results. Committed, self-motivated and challenge-lover. He
+            used to belong to the Human Resources field. Now he belong to us!
+          </p>
         </div>
 
       </div>
