added badges to cards

--- a/4happydevs.html
+++ b/4happydevs.html
@@ -93,11 +93,18 @@
           </figure>
           <h5 class="lead">Augusto Sardá</h5>
           <hr>
-          <p class="text-justify">
+          <p class="text-justify mb-0">
             Alias, <em>Angus</em>. He is the <em>math</em> guy. Electromechanical engineer, specialized in 
             industrial automation. <br>Calm, patient, chilled and thoughtfull partner. Above all, a great team mate and 
             a better friend. <em>Numpy</em> and <em>Matplotlib</em> are to <em>Angus</em> what a sword and a 
             shield are to a warrior. As you might have conclude, Python is his main IT strength. 
+          </p>
+          <p class="mt-0">
+            <span class="badge badge-pill badge-primary">#Python</span>
+            <span class="badge badge-pill badge-primary">#Flask</span>
+            <span class="badge badge-pill badge-primary">#HTML</span>
+            <span class="badge badge-pill badge-primary">#CSS</span>
+            <span class="badge badge-pill badge-primary">#Matlab</span>
           </p>
         </div>
 
@@ -107,11 +114,22 @@
           </figure>
           <h5 class="lead">Nacho Consolani</h5>
           <hr>
-          <p class="text-justify">
+          <p class="text-justify mb-0">
             The <em>brain</em>. In his head lives the knowledge. He is the one that "cooks" the solution to
            complex issues. Enhanced code comes out from his hands. Easy-going, curious and a life-long learner. He also
            holds great skills when it comes to sharing his knowledge. React, React Native, Node.js, Express.js &
-            Firebase are just some of his weapons. 
+            Firebase are just some of his weapons.
+          </p>
+          <p class="mt-0">
+            <span class="badge badge-pill badge-primary">#React</span>
+            <span class="badge badge-pill badge-primary">#React Native</span>
+            <span class="badge badge-pill badge-primary">#JavaScript</span>
+            <span class="badge badge-pill badge-primary">#Python</span>
+            <span class="badge badge-pill badge-primary">#Node.js</span>
+            <span class="badge badge-pill badge-primary">#Express.js</span>
+            <span class="badge badge-pill badge-primary">#Firebase</span>
+            <span class="badge badge-pill badge-primary">#HTML</span>
+            <span class="badge badge-pill badge-primary">#CSS</span>
           </p>
         </div>
         <!-- <div class="w-100 d-block d-md-none"></div> -->
@@ -121,11 +139,20 @@
           </figure>
           <h5 class="lead">Axel Díaz</h5>
           <hr>
-          <p class="text-justify">
+          <p class="text-justify mb-0">
             The <em>engine</em>. He is our senior developer. Always at the forefront in his field. He is by
             nature an entrepreneur. Enthusiastic, passionate and a very joyful team mate. Certified Scrum 
             Master, React Native developer, founder and teacher at <em>Tekné IT Institute</em> and much more.
             He is an expert at boosting the team's motivation.
+          </p>
+            <p class="mt-0">
+            <span class="badge badge-pill badge-primary">#JavaScript</span>
+            <span class="badge badge-pill badge-primary">#React</span>
+            <span class="badge badge-pill badge-primary">#React Native</span>
+            <span class="badge badge-pill badge-primary">#Node.js</span>
+            <span class="badge badge-pill badge-primary">#Mongo DB</span>
+            <span class="badge badge-pill badge-primary">#HTML</span>
+            <span class="badge badge-pill badge-primary">#CSS</span>
           </p>
         </div>
 
@@ -135,10 +162,17 @@
           </figure>
           <h5 class="lead">Mauro Consolani</h5>
           <hr>
-          <p class="text-justify">
+          <p class="text-justify mb-0">
             The <em>designer</em>. He is practical and straight forward. When time becomes a scrace resource,
             he returns functional and good looking results. Committed, self-motivated and challenge-lover. He
             used to belong to the Human Resources field. Now he belong to us!
+          </p>
+          <p class="mt-0">
+            <span class="badge badge-pill badge-primary">#Python</span>
+            <span class="badge badge-pill badge-primary">#Flask</span>
+            <span class="badge badge-pill badge-primary">#Bootstrap</span>
+            <span class="badge badge-pill badge-primary">#HTML</span>
+            <span class="badge badge-pill badge-primary">#CSS</span>
           </p>
         </div>
 
