--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="#section-one">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Team</a>
+            <a class="nav-link" href="#section-half-one">Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">What we do</a>
+            <a class="nav-link" href="#section-two">What we do</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Contact</a>
+            <a class="nav-link disabled" href="#">Contact</a>
           </li>
         </ul>
       </div>
