added badge to angus

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             shield are to a warrior. As you might have conclude, Python is his main IT strength. 
           </p>
           <p class="mt-0">
+            <span class="badge badge-pill badge-primary">#C</span>
             <span class="badge badge-pill badge-primary">#Python</span>
             <span class="badge badge-pill badge-primary">#Flask</span>
             <span class="badge badge-pill badge-primary">#HTML</span>
