added and styled footer

--- a/index.html
+++ b/index.html
@@ -204,6 +204,17 @@
 
   </main>
 
+  <footer>
+    <i class="fas fa-tools"></i>
+    <p>
+        If you got this far, I have good news!
+        <br><em>4HappyDev's</em> landing page is fortunately not finished yet! More content coming soon...
+    </p>
+    <p>
+        Got this far! New content coming soon!
+    </p>
+    <i class="fas fa-hard-hat"></i>
+  </footer>
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
