--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
       <meta property='og:title' content="4 Happy Developers">
-      <meta property='og:image' content='static/profile.png'/>
+      <meta property='og:image' content='static/mauro.jpeg'/>
       <meta property='og:description' content='Mobile and Web development team'/>
       <meta property='og:url' content='https://4happydevs.com.ar/'/>
     <link rel="stylesheet" href="static/stylesheet.css">
