fix grammar issues

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
           <hr>
           <p class="text-justify mb-0">
             Alias, <em>Angus</em>. He is the <em>math</em> guy. Electromechanical engineer, specialized in 
-            industrial automation. <br>Calm, patient, chilled and thoughtfull partner. Above all, a great team mate and 
+            industrial automation. <br>Calm, patient, chilled and thoughtful partner. Above all, a great team mate and 
             a better friend. <em>Numpy</em> and <em>Matplotlib</em> are to <em>Angus</em> what a sword and a 
-            shield are to a warrior. As you might have conclude, Python is his main IT strength. 
+            shield are to a warrior. As you might have concluded, Python is his main IT strength. 
           </p>
           <p class="mt-0">
             <span class="badge badge-pill badge-primary">#C</span>
@@ -169,9 +169,9 @@
           <h5 class="lead">Mauro Consolani</h5>
           <hr>
           <p class="text-justify mb-0">
-            The <em>designer</em>. He is practical and straight forward. When time becomes a scrace resource,
+            The <em>designer</em>. He is practical and straight forward. When time becomes a scarce resource,
             he returns functional and good looking results. Committed, self-motivated and challenge-lover. He
-            used to belong to the Human Resources field. Now he belong to us!
+            used to belong to the Human Resources field. Now he belongs to us!
           </p>
           <p class="mt-0">
             <span class="badge badge-pill badge-primary">#Python</span>
@@ -191,7 +191,7 @@
 
         <div class="col-sm-6 order-2 order-md-1 align-self-center" id="box-three">
           <p class="text-justify">
-            <span>We develop applications.</span> Our especiallities are <b>mobile</b> and <b>web</b> 
+            <span>We develop applications.</span> Our specialties are <b>mobile</b> and <b>web</b> 
             applications.
             We do it because we are passionate and love challenges. We also do it to learn and improve 
             our skills. <span>Feel free to get in touch with us for more information!</span>
